deploy: df6c95986c2c5d382ff768c92fcebcf3fb41e83d

--- a/notes/linux/shell/script/index.html
+++ b/notes/linux/shell/script/index.html
@@ -138,13 +138,14 @@ Ormissia's Blog</a>
 <ul class=active>
 <li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
 <li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/linux/shell/vi/ title=vi>vi</a></li>
 <li><a class=active href=/notes/linux/shell/script/ title=Script>Script</a></li>
 </ul>
 </li>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/linux/tool/>Tool</a>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/system/>System</a>
 <ul>
-<li><a href=/notes/linux/tool/vi/ title=vi>vi</a></li>
+<li><a href=/notes/linux/system/system/ title=Memory>Memory</a></li>
 </ul>
 </li>
 </ul>
