--- a/notes/linux/shell/advance/index.html
+++ b/notes/linux/shell/advance/index.html
@@ -15,7 +15,9 @@
 <meta property="og:title" content="Advance">
 <meta property="og:description" content="xargs xargs是给命令传递参数的一个过滤器，可以将管道或标准输入（stdin）数据转换成命令行参数，也能够从文件的输出中读取数据，一般是和管道一起使用。 格式:
 somecommand | xargs [-item] [command] 选项：
--a file 从文件中读入作为 stdin -e flag ，注意有的时候可能会是-E，flag必须是一个以空格分隔的标志，当xargs分析到含有flag这个标志的时候就停止。 -p 当每次执行一个argument的时候询问一次用户。 -n num 后面加次数，表示命令在执行的时候一次用的argument的个数，默认是用所有的。 -t 表示先打印命令，然后再执行。 -i 或者是-I，这得看linux支持了，将xargs的每项名称，一般是一行一行赋值给 {}，可以用 {} 代替。 -r no-run-if-empty 当xargs的输入为空的时候则停止xargs，不用再去执行了。 -s num 命令行的最大字符数，指的是 xargs 后面那个命令的最大命令行字符数。 -L num 从标准输入一次读取 num 行送给 command 命令。 -l 同 -L。 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。 -x exit的意思，主要是配合-s使用。。     ">
+-a file 从文件中读入作为 stdin -e flag ，注意有的时候可能会是-E，flag必须是一个以空格分隔的标志，当xargs分析到含有flag这个标志的时候就停止。 -p 当每次执行一个argument的时候询问一次用户。 -n num 后面加次数，表示命令在执行的时候一次用的argument的个数，默认是用所有的。 -t 表示先打印命令，然后再执行。 -i 或者是-I，这得看linux支持了，将xargs的每项名称，一般是一行一行赋值给 {}，可以用 {} 代替。 -r no-run-if-empty 当xargs的输入为空的时候则停止xargs，不用再去执行了。 -s num 命令行的最大字符数，指的是 xargs 后面那个命令的最大命令行字符数。 -L num 从标准输入一次读取 num 行送给 command 命令。 -l 同 -L。 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。 -x exit的意思，主要是配合-s使用。。     top // TODO 测试线上能否正常显示图片
+Linux top命令VIRT,RES,SHR,DATA的含义:
+ VIRT:virtual memory usage虚拟内存  进程“需要的”虚拟内存大小，包括进程使用的库、代码、数据等 假如进程申请100m的内存，但实际只使用了10m，那么它会增长100m，而不是实际的使用量   RES:resident memory usage常驻内存  进程当前使用的内存大小，但不包括swap out 包含其他进程的共享 如果申请100m的内存，实际使用10m，它只增长10m，与VIRT相反 关于库占用内存的情况，它只统计加载的库文件所占内存大小   SHR:shared memory共享内存  除了自身进程的共享内存，也包括其他进程的共享内存 虽然进程只使用了几个共享库的函数，但它包含了整个共享库的大小 计算某个进程所占的物理内存大小公式：RES – SHR swap out后，它将会降下来    top运行中可以通过top的内部命令对进程的显示方式进行控制。内部命令如下：">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://ormissia.github.io/notes/linux/shell/advance/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
@@ -140,13 +142,14 @@ Ormissia's Blog</a>
 <ul class=active>
 <li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
 <li><a class=active href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/linux/shell/vi/ title=vi>vi</a></li>
 <li><a href=/notes/linux/shell/script/ title=Script>Script</a></li>
 </ul>
 </li>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/linux/tool/>Tool</a>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/system/>System</a>
 <ul>
-<li><a href=/notes/linux/tool/vi/ title=vi>vi</a></li>
+<li><a href=/notes/linux/system/system/ title=Memory>Memory</a></li>
 </ul>
 </li>
 </ul>
@@ -181,6 +184,83 @@ Ormissia's Blog</a>
 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。
 -x exit的意思，主要是配合-s使用。。
 </code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>top</span></h5>
+<div class=card>
+<div class=card-body><p>// TODO 测试线上能否正常显示图片<br>
+<img src=top.png alt=top></p>
+<p>Linux <code>top</code>命令VIRT,RES,SHR,DATA的含义:</p>
+<ul>
+<li><code>VIRT</code>:<code>virtual memory usage</code>虚拟内存
+<ul>
+<li>进程“需要的”虚拟内存大小，包括进程使用的库、代码、数据等</li>
+<li>假如进程申请100m的内存，但实际只使用了10m，那么它会增长100m，而不是实际的使用量</li>
+</ul>
+</li>
+<li><code>RES</code>:<code>resident memory usage</code>常驻内存
+<ul>
+<li>进程当前使用的内存大小，但不包括swap out</li>
+<li>包含其他进程的共享</li>
+<li>如果申请100m的内存，实际使用10m，它只增长10m，与<code>VIRT</code>相反</li>
+<li>关于库占用内存的情况，它只统计加载的库文件所占内存大小</li>
+</ul>
+</li>
+<li><code>SHR</code>:<code>shared memory</code>共享内存
+<ul>
+<li>除了自身进程的共享内存，也包括其他进程的共享内存</li>
+<li>虽然进程只使用了几个共享库的函数，但它包含了整个共享库的大小</li>
+<li>计算某个进程所占的物理内存大小公式：<code>RES – SHR</code></li>
+<li><code>swap out</code>后，它将会降下来</li>
+</ul>
+</li>
+</ul>
+<p><code>top</code>运行中可以通过<code>top</code>的内部命令对进程的显示方式进行控制。内部命令如下：<br>
+s – 改变画面更新频率<br>
+l – 关闭或开启第一部分第一行 top 信息的表示<br>
+t – 关闭或开启第一部分第二行 Tasks 和第三行 Cpus 信息的表示<br>
+m – 关闭或开启第一部分第四行 Mem 和 第五行 Swap 信息的表示<br>
+N – 以 PID 的大小的顺序排列表示进程列表<br>
+P – 以 CPU 占用率大小的顺序排列进程列表<br>
+M – 以内存占用率大小的顺序排列进程列表<br>
+h – 显示帮助<br>
+n – 设置在进程列表所显示进程的数量<br>
+q – 退出 top</p>
+<p>序号 列名 含义<br>
+a PID 进程id<br>
+b PPID 父进程id<br>
+c RUSER Real user name<br>
+d UID 进程所有者的用户id<br>
+e USER 进程所有者的用户名<br>
+f GROUP 进程所有者的组名<br>
+g TTY 启动进程的终端名。不是从终端启动的进程则显示为 ?<br>
+h PR 优先级<br>
+i NI nice值。负值表示高优先级，正值表示低优先级<br>
+j P 最后使用的CPU，仅在多CPU环境下有意义<br>
+k %CPU 上次更新到现在的CPU时间占用百分比<br>
+l TIME 进程使用的CPU时间总计，单位秒<br>
+m TIME+ 进程使用的CPU时间总计，单位1/100秒<br>
+n %MEM 进程使用的物理内存百分比<br>
+o VIRT 进程使用的虚拟内存总量，单位kb。VIRT=SWAP+RES<br>
+p SWAP 进程使用的虚拟内存中，被换出的大小，单位kb。<br>
+q RES 进程使用的、未被换出的物理内存大小，单位kb。RES=CODE+DATA<br>
+r CODE 可执行代码占用的物理内存大小，单位kb<br>
+s DATA 可执行代码以外的部分(数据段+栈)占用的物理内存大小，单位kb<br>
+t SHR 共享内存大小，单位kb<br>
+u nFLT 页面错误次数<br>
+v nDRT 最后一次写入到现在，被修改过的页面数。<br>
+w S 进程状态。（D=不可中断的睡眠状态，R=运行，S=睡眠，T=跟踪/停止，Z=僵尸进程）<br>
+x COMMAND 命令名/命令行<br>
+y WCHAN 若该进程在睡眠，则显示睡眠中的系统函数名<br>
+z Flags 任务标志，参考 sched.h</p>
+<p>默认情况下仅显示比较重要的 PID、USER、PR、NI、VIRT、RES、SHR、S、%CPU、%MEM、TIME+、COMMAND 列。可以通过下面的快捷键来更改显示内容。<br>
+通过<code>f</code>键可以选择显示的内容。按<code>f</code>键之后会显示列的列表，按<code>a-z</code>即可显示或隐藏对应的列，最后按回车键确定。
+按<code>o</code>键可以改变列的显示顺序。按小写的<code>a-z</code>可以将相应的列向右移动，而大写的<code>A-Z</code>可以将相应的列向左移动。最后按回车键确定。
+按大写的<code>F</code>或<code>O</code>键，然后按<code>a-z</code>可以将进程按照相应的列进行排序。而大写的<code>R</code>键可以将当前的排序倒转。</p>
+</div>
 </div>
 </div>
 </div>
