--- a/notes/linux/shell/index.html
+++ b/notes/linux/shell/index.html
@@ -138,13 +138,14 @@ Ormissia's Blog</a>
 <ul class=active>
 <li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
 <li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/linux/shell/vi/ title=vi>vi</a></li>
 <li><a href=/notes/linux/shell/script/ title=Script>Script</a></li>
 </ul>
 </li>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/linux/tool/>Tool</a>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/system/>System</a>
 <ul>
-<li><a href=/notes/linux/tool/vi/ title=vi>vi</a></li>
+<li><a href=/notes/linux/system/system/ title=Memory>Memory</a></li>
 </ul>
 </li>
 </ul>
@@ -309,6 +310,120 @@ cut -d: -f1 /etc/passwd
 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。
 -x exit的意思，主要是配合-s使用。。
 </code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>top</span></h5>
+<div class=card>
+<div class=card-body><p>// TODO 测试线上能否正常显示图片<br>
+<img src=top.png alt=top></p>
+<p>Linux <code>top</code>命令VIRT,RES,SHR,DATA的含义:</p>
+<ul>
+<li><code>VIRT</code>:<code>virtual memory usage</code>虚拟内存
+<ul>
+<li>进程“需要的”虚拟内存大小，包括进程使用的库、代码、数据等</li>
+<li>假如进程申请100m的内存，但实际只使用了10m，那么它会增长100m，而不是实际的使用量</li>
+</ul>
+</li>
+<li><code>RES</code>:<code>resident memory usage</code>常驻内存
+<ul>
+<li>进程当前使用的内存大小，但不包括swap out</li>
+<li>包含其他进程的共享</li>
+<li>如果申请100m的内存，实际使用10m，它只增长10m，与<code>VIRT</code>相反</li>
+<li>关于库占用内存的情况，它只统计加载的库文件所占内存大小</li>
+</ul>
+</li>
+<li><code>SHR</code>:<code>shared memory</code>共享内存
+<ul>
+<li>除了自身进程的共享内存，也包括其他进程的共享内存</li>
+<li>虽然进程只使用了几个共享库的函数，但它包含了整个共享库的大小</li>
+<li>计算某个进程所占的物理内存大小公式：<code>RES – SHR</code></li>
+<li><code>swap out</code>后，它将会降下来</li>
+</ul>
+</li>
+</ul>
+<p><code>top</code>运行中可以通过<code>top</code>的内部命令对进程的显示方式进行控制。内部命令如下：<br>
+s – 改变画面更新频率<br>
+l – 关闭或开启第一部分第一行 top 信息的表示<br>
+t – 关闭或开启第一部分第二行 Tasks 和第三行 Cpus 信息的表示<br>
+m – 关闭或开启第一部分第四行 Mem 和 第五行 Swap 信息的表示<br>
+N – 以 PID 的大小的顺序排列表示进程列表<br>
+P – 以 CPU 占用率大小的顺序排列进程列表<br>
+M – 以内存占用率大小的顺序排列进程列表<br>
+h – 显示帮助<br>
+n – 设置在进程列表所显示进程的数量<br>
+q – 退出 top</p>
+<p>序号 列名 含义<br>
+a PID 进程id<br>
+b PPID 父进程id<br>
+c RUSER Real user name<br>
+d UID 进程所有者的用户id<br>
+e USER 进程所有者的用户名<br>
+f GROUP 进程所有者的组名<br>
+g TTY 启动进程的终端名。不是从终端启动的进程则显示为 ?<br>
+h PR 优先级<br>
+i NI nice值。负值表示高优先级，正值表示低优先级<br>
+j P 最后使用的CPU，仅在多CPU环境下有意义<br>
+k %CPU 上次更新到现在的CPU时间占用百分比<br>
+l TIME 进程使用的CPU时间总计，单位秒<br>
+m TIME+ 进程使用的CPU时间总计，单位1/100秒<br>
+n %MEM 进程使用的物理内存百分比<br>
+o VIRT 进程使用的虚拟内存总量，单位kb。VIRT=SWAP+RES<br>
+p SWAP 进程使用的虚拟内存中，被换出的大小，单位kb。<br>
+q RES 进程使用的、未被换出的物理内存大小，单位kb。RES=CODE+DATA<br>
+r CODE 可执行代码占用的物理内存大小，单位kb<br>
+s DATA 可执行代码以外的部分(数据段+栈)占用的物理内存大小，单位kb<br>
+t SHR 共享内存大小，单位kb<br>
+u nFLT 页面错误次数<br>
+v nDRT 最后一次写入到现在，被修改过的页面数。<br>
+w S 进程状态。（D=不可中断的睡眠状态，R=运行，S=睡眠，T=跟踪/停止，Z=僵尸进程）<br>
+x COMMAND 命令名/命令行<br>
+y WCHAN 若该进程在睡眠，则显示睡眠中的系统函数名<br>
+z Flags 任务标志，参考 sched.h</p>
+<p>默认情况下仅显示比较重要的 PID、USER、PR、NI、VIRT、RES、SHR、S、%CPU、%MEM、TIME+、COMMAND 列。可以通过下面的快捷键来更改显示内容。<br>
+通过<code>f</code>键可以选择显示的内容。按<code>f</code>键之后会显示列的列表，按<code>a-z</code>即可显示或隐藏对应的列，最后按回车键确定。
+按<code>o</code>键可以改变列的显示顺序。按小写的<code>a-z</code>可以将相应的列向右移动，而大写的<code>A-Z</code>可以将相应的列向左移动。最后按回车键确定。
+按大写的<code>F</code>或<code>O</code>键，然后按<code>a-z</code>可以将进程按照相应的列进行排序。而大写的<code>R</code>键可以将当前的排序倒转。</p>
+</div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>命令</span></h5>
+<div class=card>
+<div class=card-body><p>显示行号</p>
+<pre><code>:set number
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>在<code>vi</code>中执行shell命令</p>
+<pre><code>:!ls-l
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>将<code>shell</code>命令的结果插入到当前行的下一行</p>
+<pre><code>:r !date  //读取系统时间并插入到当前行的下一行
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>将起始行号和结束行号指定的范围中的内容输入到shell命令command处理，并将处理结果替换起始行号和结束行号指定的范围中的内容</p>
+<pre><code>:62,72 !sort  //将62行到72行的内容进行排序
+</code></pre><p>当前光标所在行，除可以指定行号外，也可以用<code>.</code>表示</p>
+<pre><code>:. !tr [a-z] [A-Z]  //将当前行的小写转为大写
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>将起始行号和结束行号所指定的范围的内容作为命令command的输入，不会改变当前编辑的文件的内容</p>
+<pre><code>:62,72 w !sort  //将62行到72行的内容进行排序，但排序的结果并不会直接输出到当前编辑的文件中，而是显示在vim敲命令的区域
+</code></pre></div>
+</div>
+<div class=card>
+<div class=card-body><p>将某一行作为<code>shell</code>命令执行</p>
+<pre><code>:62 w !shell //将会把第62行的内容作为shell命令来执行并显示结果，而且不会改变当前编辑的文件的内容
+</code></pre></div>
 </div>
 </div>
 </div>
