--- a/notes/linux/system/system/index.html
+++ b/notes/linux/system/system/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>vi</title>
+<title>Memory</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -12,17 +12,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
-<meta property="og:title" content="vi">
-<meta property="og:description" content="快捷键     命令 显示行号
-:set number   在vi中执行shell命令
-:!ls-l   将shell命令的结果插入到当前行的下一行
-:r !date //读取系统时间并插入到当前行的下一行   将起始行号和结束行号指定的范围中的内容输入到shell命令command处理，并将处理结果替换起始行号和结束行号指定的范围中的内容
-:62,72 !sort //将62行到72行的内容进行排序 当前光标所在行，除可以指定行号外，也可以用.表示
-:. !tr [a-z] [A-Z] //将当前行的小写转为大写   将起始行号和结束行号所指定的范围的内容作为命令command的输入，不会改变当前编辑的文件的内容
-:62,72 w !sort //将62行到72行的内容进行排序，但排序的结果并不会直接输出到当前编辑的文件中，而是显示在vim敲命令的区域   将某一行作为shell命令执行
-:62 w !shell //将会把第62行的内容作为shell命令来执行并显示结果，而且不会改变当前编辑的文件的内容     ">
+<meta property="og:title" content="Memory">
+<meta property="og:description" content="内存 一般来说内存占用大小有如下规律：VSS >= RSS >= PSS >= USS
+ VSS - Virtual Set Size 虚拟耗用内存（包含共享库占用的内存） RSS - Resident Set Size 实际使用物理内存（包含共享库占用的内存） PSS - Proportional Set Size 实际使用的物理内存（比例分配共享库占用的内存） USS - Unique Set Size 进程独自占用的物理内存（不包含共享库占用的内存）    RSS / VSZ
+ RSS是Resident Set Size（常驻内存大小）的缩写，用于表示进程使用了多少内存（RAM中的物理内存）， RSS不包含已经被换出的内存。RSS包含了它所链接的动态库并且被加载到物理内存中的内存。RSS还包含栈内存和堆内存。 VSZ是Virtual Memory Size（虚拟内存大小）的缩写。它包含了进程所能访问的所有内存，包含了被换出的内存， 被分配但是还没有被使用的内存，以及动态库中的内存。  假设进程A的二进制文件是500K，并且链接了一个2500K的动态库，堆和栈共使用了200K，其中100K在内存中（剩下的被换出或者不再被使用）， 一共加载了动态库中的1000K内容以及二进制文件中的400K内容至内存中，那么：
+RSS: 400K + 1000K + 100K = 1500K VSZ: 500K + 2500K + 200K = 3200K 由于部分内存是共享的，被多个进程使用，所以如果将所有进程的RSS值加起来可能会大于系统的内存总量。
+申请过的内存如果程序没有实际使用，则可能不显示在RSS里。比如说一个程序，预先申请了一大批内存， 过了一段时间才使用，你会发现RSS会增长而VSZ保持不变。">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://ormissia.github.io/notes/linux/tool/vi/"><meta property="article:section" content="notes">
+<meta property="og:url" content="https://ormissia.github.io/notes/linux/system/system/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -145,13 +142,14 @@ Ormissia's Blog</a>
 <ul>
 <li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
 <li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
+<li><a href=/notes/linux/shell/vi/ title=vi>vi</a></li>
 <li><a href=/notes/linux/shell/script/ title=Script>Script</a></li>
 </ul>
 </li>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/tool/>Tool</a>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/system/>System</a>
 <ul class=active>
-<li><a class=active href=/notes/linux/tool/vi/ title=vi>vi</a></li>
+<li><a class=active href=/notes/linux/system/system/ title=Memory>Memory</a></li>
 </ul>
 </li>
 </ul>
@@ -167,46 +165,38 @@ Ormissia's Blog</a>
 <div class="container-fluid note-card-holder" id=note-card-holder>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>快捷键</span></h5>
+<h5 class=note-title><span>内存</span></h5>
 <div class=card>
-<div class=card-body></div>
+<div class=card-body><p>一般来说内存占用大小有如下规律：VSS >= RSS >= PSS >= USS</p>
+<ul>
+<li>VSS - Virtual Set Size 虚拟耗用内存（包含共享库占用的内存）</li>
+<li>RSS - Resident Set Size 实际使用物理内存（包含共享库占用的内存）</li>
+<li>PSS - Proportional Set Size 实际使用的物理内存（比例分配共享库占用的内存）</li>
+<li>USS - Unique Set Size 进程独自占用的物理内存（不包含共享库占用的内存）</li>
+</ul>
 </div>
-</div>
-</div>
-<div class=note-card>
-<div class=item>
-<h5 class=note-title><span>命令</span></h5>
-<div class=card>
-<div class=card-body><p>显示行号</p>
-<pre><code>:set number
-</code></pre></div>
 </div>
 <div class=card>
-<div class=card-body><p>在<code>vi</code>中执行shell命令</p>
-<pre><code>:!ls-l
-</code></pre></div>
+<div class=card-body><p>RSS / VSZ</p>
+<ul>
+<li>RSS是<code>Resident Set Size</code>（常驻内存大小）的缩写，用于表示进程使用了多少内存（RAM中的物理内存），
+RSS不包含已经被换出的内存。RSS包含了它所链接的动态库并且被加载到物理内存中的内存。RSS还包含栈内存和堆内存。</li>
+<li>VSZ是<code>Virtual Memory Size</code>（虚拟内存大小）的缩写。它包含了进程所能访问的所有内存，包含了被换出的内存，
+被分配但是还没有被使用的内存，以及动态库中的内存。</li>
+</ul>
+<p>假设进程A的二进制文件是500K，并且链接了一个2500K的动态库，堆和栈共使用了200K，其中100K在内存中（剩下的被换出或者不再被使用），
+一共加载了动态库中的1000K内容以及二进制文件中的400K内容至内存中，那么：</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>RSS: 400K + 1000K + 100K <span style=color:#f92672>=</span> 1500K
+VSZ: 500K + 2500K + 200K <span style=color:#f92672>=</span> 3200K
+</code></pre></div><p>由于部分内存是共享的，被多个进程使用，所以如果将所有进程的RSS值加起来可能会大于系统的内存总量。</p>
+<p>申请过的内存如果程序没有实际使用，则可能不显示在RSS里。比如说一个程序，预先申请了一大批内存，
+过了一段时间才使用，你会发现RSS会增长而VSZ保持不变。</p>
+<p>还有一个概念是PSS，它是<code>proportional set size</code>（proportional是成比例的意思）的缩写。
+这是一种新的度量方式。它将动态库所使用的内存按比例划分。比如我们前面例子中的动态库如果是被两个进程使用，那么：</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>PSS: 400K + <span style=color:#f92672>(</span>1000K/2<span style=color:#f92672>)</span> + 100K <span style=color:#f92672>=</span> 400K + 500K + 100K <span style=color:#f92672>=</span> 1000K
+</code></pre></div><p>一个进程中的多个线程共享同样的地址空间。所以一个进程中的多个线程的RSS，VSZ，PSS是完全相同的。linux下可以使用ps或者top命令查看这些信息。</p>
+<p><a href=https://stackoverflow.com/a/21049737>英文原文</a></p>
 </div>
-<div class=card>
-<div class=card-body><p>将<code>shell</code>命令的结果插入到当前行的下一行</p>
-<pre><code>:r !date  //读取系统时间并插入到当前行的下一行
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将起始行号和结束行号指定的范围中的内容输入到shell命令command处理，并将处理结果替换起始行号和结束行号指定的范围中的内容</p>
-<pre><code>:62,72 !sort  //将62行到72行的内容进行排序
-</code></pre><p>当前光标所在行，除可以指定行号外，也可以用<code>.</code>表示</p>
-<pre><code>:. !tr [a-z] [A-Z]  //将当前行的小写转为大写
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将起始行号和结束行号所指定的范围的内容作为命令command的输入，不会改变当前编辑的文件的内容</p>
-<pre><code>:62,72 w !sort  //将62行到72行的内容进行排序，但排序的结果并不会直接输出到当前编辑的文件中，而是显示在vim敲命令的区域
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将某一行作为<code>shell</code>命令执行</p>
-<pre><code>:62 w !shell //将会把第62行的内容作为shell命令来执行并显示结果，而且不会改变当前编辑的文件的内容
-</code></pre></div>
 </div>
 </div>
 </div>
