--- a/notes/linux/shell/advance/index.html
+++ b/notes/linux/shell/advance/index.html
@@ -15,8 +15,7 @@
 <meta property="og:title" content="Advance">
 <meta property="og:description" content="xargs xargs是给命令传递参数的一个过滤器，可以将管道或标准输入（stdin）数据转换成命令行参数，也能够从文件的输出中读取数据，一般是和管道一起使用。 格式:
 somecommand | xargs [-item] [command] 选项：
--a file 从文件中读入作为 stdin -e flag ，注意有的时候可能会是-E，flag必须是一个以空格分隔的标志，当xargs分析到含有flag这个标志的时候就停止。 -p 当每次执行一个argument的时候询问一次用户。 -n num 后面加次数，表示命令在执行的时候一次用的argument的个数，默认是用所有的。 -t 表示先打印命令，然后再执行。 -i 或者是-I，这得看linux支持了，将xargs的每项名称，一般是一行一行赋值给 {}，可以用 {} 代替。 -r no-run-if-empty 当xargs的输入为空的时候则停止xargs，不用再去执行了。 -s num 命令行的最大字符数，指的是 xargs 后面那个命令的最大命令行字符数。 -L num 从标准输入一次读取 num 行送给 command 命令。 -l 同 -L。 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。 -x exit的意思，主要是配合-s使用。。     top // TODO 测试线上能否正常显示图片
-Linux top命令VIRT,RES,SHR,DATA的含义:
+-a file 从文件中读入作为 stdin -e flag ，注意有的时候可能会是-E，flag必须是一个以空格分隔的标志，当xargs分析到含有flag这个标志的时候就停止。 -p 当每次执行一个argument的时候询问一次用户。 -n num 后面加次数，表示命令在执行的时候一次用的argument的个数，默认是用所有的。 -t 表示先打印命令，然后再执行。 -i 或者是-I，这得看linux支持了，将xargs的每项名称，一般是一行一行赋值给 {}，可以用 {} 代替。 -r no-run-if-empty 当xargs的输入为空的时候则停止xargs，不用再去执行了。 -s num 命令行的最大字符数，指的是 xargs 后面那个命令的最大命令行字符数。 -L num 从标准输入一次读取 num 行送给 command 命令。 -l 同 -L。 -d delim 分隔符，默认的xargs分隔符是回车，argument的分隔符是空格，这里修改的是xargs的分隔符。 -x exit的意思，主要是配合-s使用。。     top Linux top命令VIRT,RES,SHR,DATA的含义:
  VIRT:virtual memory usage虚拟内存  进程“需要的”虚拟内存大小，包括进程使用的库、代码、数据等 假如进程申请100m的内存，但实际只使用了10m，那么它会增长100m，而不是实际的使用量   RES:resident memory usage常驻内存  进程当前使用的内存大小，但不包括swap out 包含其他进程的共享 如果申请100m的内存，实际使用10m，它只增长10m，与VIRT相反 关于库占用内存的情况，它只统计加载的库文件所占内存大小   SHR:shared memory共享内存  除了自身进程的共享内存，也包括其他进程的共享内存 虽然进程只使用了几个共享库的函数，但它包含了整个共享库的大小 计算某个进程所占的物理内存大小公式：RES – SHR swap out后，它将会降下来    top运行中可以通过top的内部命令对进程的显示方式进行控制。内部命令如下：">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://ormissia.github.io/notes/linux/shell/advance/"><meta property="article:section" content="notes">
@@ -191,9 +190,7 @@ Ormissia's Blog</a>
 <div class=item>
 <h5 class=note-title><span>top</span></h5>
 <div class=card>
-<div class=card-body><p>// TODO 测试线上能否正常显示图片<br>
-<img src=top.png alt=top></p>
-<p>Linux <code>top</code>命令VIRT,RES,SHR,DATA的含义:</p>
+<div class=card-body><p>Linux <code>top</code>命令VIRT,RES,SHR,DATA的含义:</p>
 <ul>
 <li><code>VIRT</code>:<code>virtual memory usage</code>虚拟内存
 <ul>
