--- a/notes/python/index.html
+++ b/notes/python/index.html
@@ -163,7 +163,31 @@ Ormissia's Blog</a>
 <div class=item>
 <h5 class=note-title><span>函数</span></h5>
 <div class=card>
-<div class=card-body></div>
+<div class=card-body><p>在 python 中，类型属于对象，变量是没有类型的：</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-python data-lang=python>a<span style=color:#f92672>=</span>[<span style=color:#ae81ff>1</span>,<span style=color:#ae81ff>2</span>,<span style=color:#ae81ff>3</span>]
+a<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;ormissia&#34;</span>
+</code></pre></div><p>以上代码中，<code>[1,2,3]</code>是<code>List</code>类型，<code>"ormissia"</code>是<code>String</code>类型，而变量<code>a</code>是没有类型，他仅仅是一个对象的引用（一个指针），可以是指向<code>List</code>类型对象，也可以是指向<code>String</code>类型对象。</p>
+<h2 id=可更改mutable与不可更改immutable对象>可更改(mutable)与不可更改(immutable)对象</h2>
+<p>在python中，<code>strings</code>，<code>tuples</code>和<code>numbers</code>是不可更改的对象，而<code>list</code>，<code>dict</code>等则是可以修改的对象。</p>
+<ul>
+<li>
+<p>不可变类型：变量赋值<code>a=5</code>后再赋值<code>a=10</code>，这里实际是新生成一个<code>int</code>值对象<code>10</code>，再让<code>a</code>指向它，而<code>5</code>被丢弃，不是改变<code>a</code>的值，相当于新生成了<code>a</code>。</p>
+</li>
+<li>
+<p>可变类型：变量赋值<code>la = [1,2,3,4]</code>后再赋值<code>la[2] = 5</code>则是将<code>list la</code>的第三个元素值更改，本身<code>la</code>没有动，只是其内部的一部分值被修改了。</p>
+</li>
+</ul>
+<h2 id=python函数的参数传递>python函数的参数传递：</h2>
+<ul>
+<li>
+<p>不可变类型：类似<code>C++</code>的值传递，如整数、字符串、元组。如<code>fun(a)</code>，传递的只是<code>a</code>的值，没有影响<code>a</code>对象本身。如果在<code>fun(a)</code>内部修改<code>a</code>的值，则是新生成一个<code>a</code>的对象。</p>
+</li>
+<li>
+<p>可变类型：类似<code>C++</code>的引用传递，如列表，字典。如<code>fun(la)</code>，则是将<code>la</code>真正的传过去，修改后<code>fun</code>外部的<code>la</code>也会受影响</p>
+</li>
+</ul>
+<p>python中一切都是对象，严格意义我们不能说值传递还是引用传递，我们应该说传不可变对象和传可变对象。</p>
+</div>
 </div>
 </div>
 </div>
