deploy: e00da593db80badc03a135a4dc6b213c3561a681

--- a/notes/go/basic/index.html
+++ b/notes/go/basic/index.html
@@ -214,6 +214,18 @@ Ormissia's Blog</a>
 </div>
 </div>
 </div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>bit Byte</span></h5>
+<div class=card>
+<div class=card-body><p><code>bit</code>：计算机记忆的最小单位，一个<code>bit</code>可以代表0或1</p>
+<p><code>Byte</code>：一个<code>Byte</code>由<code>8bits</code>所组成</p>
+<p>1<code>Byte</code>=8<code>Bits</code></p>
+<p>1<code>KB</code>=1024<code>Bytes</code></p>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div class=paginator>
 </div>
