--- a/index.html
+++ b/index.html
@@ -390,6 +390,23 @@ Ormissia's Blog</a>
 <div class=container>
 <div class=row id=recent-post-cards>
 <div class="col-lg-4 col-md-6 pt-2 post-card">
+<a href=/posts/knowledge/2010-kubernetes-index/ title=Kubernetes文档索引 class=post-card-link>
+<div class=card>
+<div class=card-head>
+<img class=card-img-top src=/posts/knowledge/2010-kubernetes-index/head.svg alt="Card image cap">
+</div>
+<div class=card-body>
+<h5 class=card-title>Kubernetes文档索引</h5>
+<p class="card-text post-summary"> 为系统守护进程预留计算资源 开启服务拓扑 Master节点的高可用 Service 的 DNS </p>
+</div>
+<div class=card-footer>
+<span class=float-left>November 4, 2021</span>
+<a href=/posts/knowledge/2010-kubernetes-index/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
+</div>
+</div>
+</a>
+</div>
+<div class="col-lg-4 col-md-6 pt-2 post-card">
 <a href=/posts/problems/5005-docker-image-source/ title=修改Docker镜像源 class=post-card-link>
 <div class=card>
 <div class=card-head>
@@ -494,26 +511,6 @@ ssh-keygen -t rsa cat id_rsa.</p>
 <div class=card-footer>
 <span class=float-left>October 14, 2021</span>
 <a href=/posts/deployment/3007-linux-kubernetes/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
-</div>
-</div>
-</a>
-</div>
-<div class="col-lg-4 col-md-6 pt-2 post-card">
-<a href=/posts/problems/5003-elasticsearch-start-failed/ title=CentOS安装完ES无法启动 class=post-card-link>
-<div class=card>
-<div class=card-head>
-<img class=card-img-top src=/posts/problems/5003-elasticsearch-start-failed/head.svg alt="Card image cap">
-</div>
-<div class=card-body>
-<h5 class=card-title>CentOS安装完ES无法启动</h5>
-<p class="card-text post-summary"> 问题现象 按照ES官网文档介绍的安装步骤，使用yum的方式进行安装。安装完成之后，使用如下命令启动：
-systemctl start elasticsearch.service 控制台阻塞一会后，显示启动失败，使用如下命令查看状态：
-systemctl status elasticsearch.service 查询状态为：
-Warning: The unit file, source configuration file or drop-ins of elasticsearch.service changed on disk. Run 'systemctl daemon-reload' to reload units. ● elasticsearch.service - Elasticsearch Loaded: loaded (/usr/lib/systemd/system/elasticsearch.service; disabled; vendor preset: disabled) Active: failed (Result: timeout) since Thu 2021-10-14 00:42:40 CST; 2min 15s ago Docs: https://www.elastic.co Main PID: 2547 (code=exited, status=143) Oct 14 00:41:22 gateway systemd[1]: Starting Elasticsearch... Oct 14 00:41:29 gateway bash[2547]: [0.</p>
-</div>
-<div class=card-footer>
-<span class=float-left>October 14, 2021</span>
-<a href=/posts/problems/5003-elasticsearch-start-failed/ title=阅读 class="float-right btn btn-outline-info btn-sm">阅读</a>
 </div>
 </div>
 </a>
