deploy: 9a64c1b79cc1ca25d87db1caa771c1640c8f539d

--- a/notes/go/advance/time/index.html
+++ b/notes/go/advance/time/index.html
@@ -157,6 +157,17 @@ Ormissia's Blog</a>
 </li>
 </ul>
 </li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/hbase/>Hbase</a>
+<ul>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/hbase/shell/>Shell</a>
+<ul>
+<li><a href=/notes/hbase/shell/basic/ title=Basic>Basic</a></li>
+</ul>
+</li>
+</ul>
+</li>
 </div>
 </ul>
 </div>
