--- a/notes/hbase/shell/basic/index.html
+++ b/notes/hbase/shell/basic/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>vi</title>
+<title>Basic</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -12,17 +12,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
-<meta property="og:title" content="vi">
-<meta property="og:description" content="命令 显示行号
-:set number   在vi中执行shell命令
-:!ls-l   将shell命令的结果插入到当前行的下一行
-:r !date //读取系统时间并插入到当前行的下一行   将起始行号和结束行号指定的范围中的内容输入到shell命令command处理，并将处理结果替换起始行号和结束行号指定的范围中的内容
-:62,72 !sort //将62行到72行的内容进行排序 当前光标所在行，除可以指定行号外，也可以用.表示
-:. !tr [a-z] [A-Z] //将当前行的小写转为大写   将起始行号和结束行号所指定的范围的内容作为命令command的输入，不会改变当前编辑的文件的内容
-:62,72 w !sort //将62行到72行的内容进行排序，但排序的结果并不会直接输出到当前编辑的文件中，而是显示在vim敲命令的区域   将某一行作为shell命令执行
-:62 w !shell //将会把第62行的内容作为shell命令来执行并显示结果，而且不会改变当前编辑的文件的内容     ">
+<meta property="og:title" content="Basic">
+<meta property="og:description" content="shell 在hbase的shell中scan时指定列
+scan &lsquo;table_name&rsquo;,{STARTROW=>&lsquo;start_row&rsquo;,ENDROW=>&lsquo;end_row&rsquo;,LIMIT=>100,COLUMNS=>[&lsquo;info:type&rsquo;]}
+COLUMNS=>['info:type']中参数为数组，可以指定列簇名和列名
+    ">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://ormissia.github.io/notes/linux/shell/vi/"><meta property="article:section" content="notes">
+<meta property="og:url" content="https://ormissia.github.io/notes/hbase/shell/basic/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -138,14 +134,14 @@ Ormissia's Blog</a>
 </ul>
 </li>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/>Linux</a>
-<ul class=active>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/>Linux</a>
+<ul>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/shell/>Shell</a>
-<ul class=active>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/shell/>Shell</a>
+<ul>
 <li><a href=/notes/linux/shell/basic/ title=Basic>Basic</a></li>
 <li><a href=/notes/linux/shell/advance/ title=Advance>Advance</a></li>
-<li><a class=active href=/notes/linux/shell/vi/ title=vi>vi</a></li>
+<li><a href=/notes/linux/shell/vi/ title=vi>vi</a></li>
 <li><a href=/notes/linux/shell/script/ title=Script>Script</a></li>
 </ul>
 </li>
@@ -158,12 +154,12 @@ Ormissia's Blog</a>
 </ul>
 </li>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/hbase/>Hbase</a>
-<ul>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/hbase/>Hbase</a>
+<ul class=active>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/hbase/shell/>Shell</a>
-<ul>
-<li><a href=/notes/hbase/shell/basic/ title=Basic>Basic</a></li>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/hbase/shell/>Shell</a>
+<ul class=active>
+<li><a class=active href=/notes/hbase/shell/basic/ title=Basic>Basic</a></li>
 </ul>
 </li>
 </ul>
@@ -179,38 +175,12 @@ Ormissia's Blog</a>
 <div class="container-fluid note-card-holder" id=note-card-holder>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>命令</span></h5>
+<h5 class=note-title><span>shell</span></h5>
 <div class=card>
-<div class=card-body><p>显示行号</p>
-<pre><code>:set number
-</code></pre></div>
+<div class=card-body><p>在hbase的shell中scan时指定列</p>
+<p>scan &lsquo;table_name&rsquo;,{STARTROW=>&lsquo;start_row&rsquo;,ENDROW=>&lsquo;end_row&rsquo;,LIMIT=>100,COLUMNS=>[&lsquo;info:type&rsquo;]}</p>
+<p><code>COLUMNS=>['info:type']</code>中参数为数组，可以指定列簇名和列名</p>
 </div>
-<div class=card>
-<div class=card-body><p>在<code>vi</code>中执行shell命令</p>
-<pre><code>:!ls-l
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将<code>shell</code>命令的结果插入到当前行的下一行</p>
-<pre><code>:r !date  //读取系统时间并插入到当前行的下一行
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将起始行号和结束行号指定的范围中的内容输入到shell命令command处理，并将处理结果替换起始行号和结束行号指定的范围中的内容</p>
-<pre><code>:62,72 !sort  //将62行到72行的内容进行排序
-</code></pre><p>当前光标所在行，除可以指定行号外，也可以用<code>.</code>表示</p>
-<pre><code>:. !tr [a-z] [A-Z]  //将当前行的小写转为大写
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将起始行号和结束行号所指定的范围的内容作为命令command的输入，不会改变当前编辑的文件的内容</p>
-<pre><code>:62,72 w !sort  //将62行到72行的内容进行排序，但排序的结果并不会直接输出到当前编辑的文件中，而是显示在vim敲命令的区域
-</code></pre></div>
-</div>
-<div class=card>
-<div class=card-body><p>将某一行作为<code>shell</code>命令执行</p>
-<pre><code>:62 w !shell //将会把第62行的内容作为shell命令来执行并显示结果，而且不会改变当前编辑的文件的内容
-</code></pre></div>
 </div>
 </div>
 </div>
