--- a/notes/hbase/shell/index.html
+++ b/notes/hbase/shell/index.html
@@ -194,7 +194,9 @@ Ormissia's Blog</a>
 <h5>联系方式:</h5>
 <ul>
 <li><span>QQ: </span> <span>1432050813</span></li>
-<li><span>Email: </span> <span>ormissia@outlook.com</span></li>
+<li><a href=mailto:ormissia@outlook.com target=_blank rel=noopener>
+<span><i class="fas fa-envelope"></i></span> <span>ormissia@outlook.com</span>
+</a></li>
 </ul>
 </div>
 </div>
