--- a/notes/linux/shell/script/index.html
+++ b/notes/linux/shell/script/index.html
@@ -445,7 +445,9 @@ echo <span style=color:#e6db74>${</span>ab:2:5<span style=color:#e6db74>}</span>
 <h5>联系方式:</h5>
 <ul>
 <li><span>QQ: </span> <span>1432050813</span></li>
-<li><span>Email: </span> <span>ormissia@outlook.com</span></li>
+<li><a href=mailto:ormissia@outlook.com target=_blank rel=noopener>
+<span><i class="fas fa-envelope"></i></span> <span>ormissia@outlook.com</span>
+</a></li>
 </ul>
 </div>
 </div>
