--- a/notes/linux/system/system/index.html
+++ b/notes/linux/system/system/index.html
@@ -222,7 +222,9 @@ VSZ: 500K + 2500K + 200K <span style=color:#f92672>=</span> 3200K
 <h5>联系方式:</h5>
 <ul>
 <li><span>QQ: </span> <span>1432050813</span></li>
-<li><span>Email: </span> <span>ormissia@outlook.com</span></li>
+<li><a href=mailto:ormissia@outlook.com target=_blank rel=noopener>
+<span><i class="fas fa-envelope"></i></span> <span>ormissia@outlook.com</span>
+</a></li>
 </ul>
 </div>
 </div>
