--- a/notes/python/basic/basic/index.html
+++ b/notes/python/basic/basic/index.html
@@ -221,7 +221,9 @@ a<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;ormissia&#34;<
 <h5>联系方式:</h5>
 <ul>
 <li><span>QQ: </span> <span>1432050813</span></li>
-<li><span>Email: </span> <span>ormissia@outlook.com</span></li>
+<li><a href=mailto:ormissia@outlook.com target=_blank rel=noopener>
+<span><i class="fas fa-envelope"></i></span> <span>ormissia@outlook.com</span>
+</a></li>
 </ul>
 </div>
 </div>
