--- a/notes/go/basic/basic/index.html
+++ b/notes/go/basic/basic/index.html
@@ -177,6 +177,17 @@ Ormissia's Blog</a>
 </li>
 </ul>
 </li>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/kafka/>Kafka</a>
+<ul>
+<li>
+<i class="fas fa-plus-circle"></i><a href=/notes/kafka/shell/>Shell</a>
+<ul>
+<li><a href=/notes/kafka/shell/basic/ title=Basic>Basic</a></li>
+</ul>
+</li>
+</ul>
+</li>
 </div>
 </ul>
 </div>
