deploy: 2e708c360f7e79ee14e498bc50d4768db6282cbd

--- a/index.html
+++ b/index.html
@@ -539,9 +539,31 @@ systemctl restart docker.service </p>
 <div class="degree-info card">
 <div class=row>
 <div class="col-lg-10 col-md-8">
-<h5>Elastic</h5>
+<h5>Flink</h5>
 </div>
 <div class="timeframe col-lg-2 col-md-4">2021-10</div>
+</div>
+<h6>...</h6>
+</div>
+</td>
+</tr>
+<tr>
+<td class=icon>
+<div class=hline></div>
+<div class=icon-holder>
+<i class="fas fa-server"></i>
+</div>
+</td>
+<td class=line>
+<div></div>
+</td>
+<td class=details>
+<div class="degree-info card">
+<div class=row>
+<div class="col-lg-10 col-md-8">
+<h5>Elastic</h5>
+</div>
+<div class="timeframe col-lg-2 col-md-4">2021-8</div>
 </div>
 <h6>...</h6>
 </div>
