deploy: 62caa25ddbe8381f22aae178c31469ad59d126d9

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Ormissia's Blog</a>
 <li class="nav-item dropdown">
 <a class="nav-link dropdown-toggle" href=# id=navbarDropdown role=button data-toggle=dropdown aria-haspopup=true aria-expanded=false>更多的</a>
 <div class=dropdown-menu aria-labelledby=navbarDropdown>
+<a class=dropdown-item href=#projects>项目</a>
 </div>
 </li>
 <div class=dropdown-divider id=top-navbar-divider></div>
@@ -928,7 +929,8 @@ systemctl restart docker.service </p>
 </div>
 <div class="container-fluid section-holder d-flex bg-white">
 <div class="container-fluid anchor pb-5 projects-section" id=projects>
-<h1 class=text-center>项目</h1>
+<h1 class=text-center>
+<span id=projects></span>项目</h1>
 <div class="container ml-auto text-center">
 <div class="btn-group flex-wrap" role=group id=project-filter-buttons>
 <button type=button class="btn btn-dark" data-filter=all>
