deploy: ee8e218aac3b0d4f95a2931aa834fc76e7e63f98

--- a/notes/linux/index.html
+++ b/notes/linux/index.html
@@ -806,7 +806,7 @@ VSZ: 500K + 2500K + 200K <span style=color:#f92672>=</span> 3200K
 </div>
 </section>
 </div>
-<footer class="container-fluid text-center align-content-center footer pb-2">
+<footer id=footer class="container-fluid text-center align-content-center footer pb-2">
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
