--- a/notes/linux/shell/advance/index.html
+++ b/notes/linux/shell/advance/index.html
@@ -288,7 +288,7 @@ z Flags 任务标志，参考 sched.h</p>
 </div>
 </section>
 </div>
-<footer class="container-fluid text-center align-content-center footer pb-2">
+<footer id=footer class="container-fluid text-center align-content-center footer pb-2">
 <div class="container pt-5">
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
